posts, state, registration

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -14,8 +14,8 @@ table
       tr
         td = post.title
         td = post.body
-        td = link_to "Show", post
-        td = link_to "Edit", edit_post_path(post)
+        td = link_to "Show", region_posts_path(post)
+        td = link_to "Edit", edit_region_post_path(post)
         td = link_to "Destroy", post, data: {confirm: "Are you sure?"}, method: :delete
 
 br
