--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -8,6 +8,6 @@ p
   strong Body:
   = @post.body
 
-=> link_to "Edit", edit_post_path(@post)
+=> link_to "Edit", edit_region_post_path(@post)
 '|
-=< link_to "Back", posts_path
+=< link_to "Back", region_path(@region)
