--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -2,6 +2,6 @@ h1 Editing post
 
 == render "form"
 
-=> link_to "Show", @post
+=> link_to "Show", region_post_path(@post)
 '|
-=< link_to "Back", posts_path
+=< link_to "Back", region_path(@region)
